--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "dompurify": "^2.4.1",
     "heroicons": "^2.0.12",
     "material-ui-popup-state": "^4.1.0",
     "node-sass": "^7.0.3",
